--- a/arch/arm/mach-davinci/Kconfig
+++ b/arch/arm/mach-davinci/Kconfig
@@ -7,14 +7,27 @@ comment "DaVinci Core Type"
 config ARCH_DAVINCI_DM644x
 	bool "DaVinci 644x based system"
 	select CPU_V5
+	select DAVINCI_SOC_USING_AINTC
 
 config ARCH_DAVINCI_DM646x
         bool "DaVinci 646x based system"
 	select CPU_V5
+	select DAVINCI_SOC_USING_AINTC
 
 config ARCH_DAVINCI_DM355
         bool "DaVinci 355 based system"
 	select CPU_V5
+
+config ARCH_OMAPL1x7
+	bool "OMAPL1x7 based system"
+	select CPU_V5
+	select DAVINCI_SOC_USING_CP_INTC
+
+config DAVINCI_SOC_USING_AINTC
+	bool
+
+config DAVINCI_SOC_USING_CP_INTC
+	bool
 
 comment "DaVinci Board Type"
 
@@ -41,6 +54,14 @@ config MACH_DAVINCI_DM355_EVM
 	help
 	  Configure this option to specify the whether the board used
 	  for development is a DM355 EVM
+
+config MACH_OMAPL1X7_EVM
+	bool "TI OMAPL1x7 EVM"
+	default n
+	depends on ARCH_OMAPL1x7
+	help
+	  Configure this option to specify the whether the board used
+	  for development is a OMAPPL1x7 EVM
 
 config MACH_SFFSDR
 	bool "Lyrtech SFFSDR"
