--- a/drivers/mtd/devices/Makefile
+++ b/drivers/mtd/devices/Makefile
@@ -17,3 +17,5 @@ obj-$(CONFIG_MTD_BLOCK2MTD)	+= block2mtd.o
 obj-$(CONFIG_MTD_DATAFLASH)	+= mtd_dataflash.o
 obj-$(CONFIG_MTD_M25P80)	+= m25p80.o
 obj-$(CONFIG_MTD_PS3VRAM)	+= ps3vram.o
+obj-$(CONFIG_DAVINCI_SPI_EEPROM)+= at25xxA_eeprom.o
+obj-$(CONFIG_MTD_SPI_FLASH)	+= spi_flash.o
