--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -77,6 +77,23 @@ config SPI_AU1550
 	  This driver can also be built as a module.  If so, the module
 	  will be called au1550_spi.
 
+config SPI_DAVINCI
+	tristate "SPI controller driver for DaVinci SoC"
+	depends on SPI_MASTER && ARCH_DAVINCI
+	select SPI_BITBANG
+	default y
+	help
+	  SPI master controller for DaVinci MibSPI modules.  Currently,
+	  SPI is only officially supported for DM646x, DM355 and DA8xx.
+
+config SPI_DAVINCI_DMA
+	bool "Set DaVinci SPI to DMA mode"
+	depends on SPI_DAVINCI
+	default y
+	help
+	  Select this option to set DaVinci SPI to DMA mode, deselect
+	  to put in PIO mode.
+
 config SPI_BITBANG
 	tristate "Utilities for Bitbanging SPI masters"
 	help
@@ -251,6 +268,12 @@ config SPI_TLE62X0
 #
 # Add new SPI protocol masters in alphabetical order above this line
 #
+config DAVINCI_SPI_EEPROM
+	tristate "DaVinci SPI EEPROM"
+	depends on SPI_DAVINCI
+	default y
+	help
+	  This enables the SPI EEPROM client for TI DaVinci
 
 endif # SPI_MASTER
 
