Graphical LCD support for Primus.
Signed-off-by: Sudhakar Rajashekhara <sudhakar.raj@ti.com>

--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -1997,6 +1997,22 @@ config FB_DAVINCI
 	  hardware found on the TI DaVinci EVM.	 If
 	  unsure, say N.
 
+config FB_OMAPL1X7
+        tristate "OMAPL1X7 Framebuffer support"
+        depends on FB && MACH_OMAPL1X7_EVM
+	select FB_CFB_FILLRECT
+	select FB_CFB_COPYAREA
+	select FB_CFB_IMAGEBLIT
+	---help---
+          This is the frame buffer device driver for the TI LCD controller
+	  found on OMAPL1X7 EVM board.
+          If unsure, say N.
+
+config GLCD_SHARP_COLOR
+	bool "Use SHARP LQ035Q3DG01 LCD Display"
+	depends on FB_OMAPL1X7
+	default y
+
 config FB_VIRTUAL
 	tristate "Virtual Frame Buffer support (ONLY FOR TESTING!)"
 	depends on FB
