--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -1101,5 +1101,13 @@ config DEVPORT
 
 source "drivers/s390/char/Kconfig"
 
+config  OMAPL1X7_LCD
+	tristate "OMAPL1X7 Character LCD Support"
+	default n
+	depends on MACH_OMAPL1X7_EVM && !FB_OMAPL1X7
+	help
+	  OMAPL1X7 Character LCD support.
+
+
 endmenu
 
