Changed omapl1x7 references to da830.
Signed-off-by: Sudhakar Rajashekhara <sudhakar.raj@ti.com>

--- a/arch/arm/configs/davinci_evm_omapl1x7_defconfig
+++ b/arch/arm/configs/davinci_evm_omapl1x7_defconfig
@@ -183,13 +183,13 @@ CONFIG_ARCH_DAVINCI=y
 # CONFIG_ARCH_DAVINCI644x is not set
 # CONFIG_ARCH_DAVINCI_DM646x is not set
 # CONFIG_ARCH_DAVINCI_DM355 is not set
-CONFIG_ARCH_OMAPL1x7=y
+CONFIG_ARCH_DA830=y
 
 #
 # DaVinci Board Type
 #
 CONFIG_DAVINCI_SOC_USING_CP_INTC=y
-CONFIG_MACH_OMAPL1X7_EVM=y
+CONFIG_MACH_DA830_EVM=y
 # CONFIG_DAVINCI_RESET_CLOCKS is not set
 
 #
