--- a/drivers/char/Makefile
+++ b/drivers/char/Makefile
@@ -111,7 +111,7 @@ obj-$(CONFIG_PS3_FLASH)		+= ps3flash.o
 obj-$(CONFIG_JS_RTC)		+= js-rtc.o
 js-rtc-y = rtc.o
 
-obj-$(CONFIG_OMAPL1X7_LCD)	+= omapl1x7_lcd/
+obj-$(CONFIG_DA830_LCD)	+= da830_lcd/
 
 # Files generated that shall be removed upon make clean
 clean-files := consolemap_deftbl.c defkeymap.c
