--- a/drivers/video/omapl1x7/Makefile
+++ b/drivers/video/omapl1x7/Makefile
@@ -1,2 +1,2 @@
-# Makefile for Texas Instruments OMAPL1X7 framebuffer driver.
-obj-$(CONFIG_FB_OMAPL1X7) += omapl1x7_fb.o
+# Makefile for Texas Instruments DA830 framebuffer driver.
+obj-$(CONFIG_FB_DA830) += da830_fb.o
