--- a/arch/arm/mach-davinci/Kconfig
+++ b/arch/arm/mach-davinci/Kconfig
@@ -18,8 +18,8 @@ config ARCH_DAVINCI_DM355
         bool "DaVinci 355 based system"
 	select CPU_V5
 
-config ARCH_OMAPL1x7
-	bool "OMAPL1x7 based system"
+config ARCH_DA830
+	bool "DA830 based system"
 	select CPU_V5
 	select DAVINCI_SOC_USING_CP_INTC
 
@@ -55,10 +55,10 @@ config MACH_DAVINCI_DM355_EVM
 	  Configure this option to specify the whether the board used
 	  for development is a DM355 EVM
 
-config MACH_OMAPL1X7_EVM
-	bool "TI OMAPL1x7 EVM"
+config MACH_DA830_EVM
+	bool "TI DA830 EVM"
 	default n
-	depends on ARCH_OMAPL1x7
+	depends on ARCH_DA830
 	help
 	  Configure this option to specify the whether the board used
 	  for development is a OMAPPL1x7 EVM
