--- a/arch/arm/mach-davinci/Kconfig
+++ b/arch/arm/mach-davinci/Kconfig
@@ -23,6 +23,11 @@ config ARCH_DA830
 	select CPU_V5
 	select DAVINCI_SOC_USING_CP_INTC
 
+config ARCH_DA850
+	bool "DA850 based system"
+	select CPU_V5
+	select DAVINCI_SOC_USING_CP_INTC
+
 config DAVINCI_SOC_USING_AINTC
 	bool
 
@@ -61,7 +66,15 @@ config MACH_DA830_EVM
 	depends on ARCH_DA830
 	help
 	  Configure this option to specify the whether the board used
-	  for development is a OMAPPL1x7 EVM
+	  for development is a DA830 EVM
+
+config MACH_DA850_EVM
+	bool "TI DA850 EVM"
+	default n
+	depends on ARCH_DA850
+	help
+	  Configure this option to specify the whether the board used
+	  for development is a DA850 EVM
 
 config MACH_SFFSDR
 	bool "Lyrtech SFFSDR"
