--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -1999,13 +1999,13 @@ config FB_DAVINCI
 
 config FB_DA830
         tristate "DA830 Framebuffer support"
-        depends on FB && MACH_DA830_EVM
+        depends on FB && (MACH_DA830_EVM || MACH_DA850_EVM)
 	select FB_CFB_FILLRECT
 	select FB_CFB_COPYAREA
 	select FB_CFB_IMAGEBLIT
 	---help---
           This is the frame buffer device driver for the TI LCD controller
-	  found on DA830 EVM board.
+	  found on DA830 and DA850 EVM board.
           If unsure, say N.
 
 config GLCD_SHARP_COLOR
